[package]
name = "aoc2023"
version = "0.1.0"
edition = "2021"

[[bench]]
name = "benchmark"
harness = false

[dependencies]
aho-corasick = "1.1.2"
anyhow = "1.0.75"
indexmap = "2.1.0"
memchr = "2.6.4"
nalgebra = "0.32.3"
num = "0.4.1"
petgraph = "0.6.4"
rand = "0.8.5"
rayon = "1.8.0"
regex = { version = "1.10.2", default-features = false, features = ["std", "perf"] }
rustc-hash = "1.1.0"
spliter = "0.1.0"

[dev-dependencies]
criterion = "0.5.1"
indoc = "2.0.4"
